--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,5 @@ sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.py
 
 # Исключаем тестовые файлы (если нужно)
 sonar.exclusions=**/tests/**, **/venv/**
+
+sonar.python.version=3.13.0
